<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.flashbackmusic.MainActivity">

    <Button
        android:id="@+id/download_button"
...
        android:id="@+id/sortOptionsText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Sort songs by: "
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sortingOptions"
        app:layout_constraintTop_toTopOf="@id/sortingOptions" />

    <Spinner
        android:id="@+id/sortingOptions"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
...
